# llama_mobile_vector_database

./: .gitignore  README.md  config.env  fix_ios_module_structure.sh
examples/androidJavaSDKExample/: settings.gradle
examples/androidJavaSDKExample/app/: build.gradle
examples/androidJavaSDKExample/app/src/main/: AndroidManifest.xml
examples/androidSDKExample/: settings.gradle
examples/androidSDKExample/app/: build.gradle
examples/androidSDKExample/app/src/main/: AndroidManifest.xml
examples/capacitorPluginExample/: capacitor.config.json  index.html  main.js  package-lock.json  package.json  style.css
examples/capacitorPluginExample/src/: main.js  style.css
examples/flutterSDKExample/: .flutter-plugins-dependencies  README.md  pubspec.yaml
examples/flutterSDKExample/android/app/: build.gradle.kts
examples/flutterSDKExample/ios/Runner/: Info.plist
examples/flutterSDKExample/ios/Runner.xcodeproj/: project.pbxproj
examples/flutterSDKExample/lib/: main.dart
examples/flutterSDKExample/linux/: CMakeLists.txt
examples/flutterSDKExample/linux/runner/: my_application.cc
examples/flutterSDKExample/macos/Runner.xcodeproj/: project.pbxproj
examples/flutterSDKExample/test/: widget_test.dart
examples/flutterSDKExample/web/: index.html
examples/flutterSDKExample/windows/: CMakeLists.txt
examples/flutterSDKExample/windows/runner/: Runner.rc  main.cpp
examples/iOSSDKExample/: Info.plist  LaunchScreen.storyboard  Main.storyboard  project.yml
examples/iOSSDKExample/Sources/: MainViewController.swift  SceneDelegate.swift
examples/iOSSDKExample/iOSSDKExample.xcodeproj/: project.pbxproj
examples/rnSDKExample/: App.js  package.json
examples/rnSDKExample/rnSDKExample/: App.tsx  app.json  package-lock.json  package.json
examples/rnSDKExample/rnSDKExample/android/: settings.gradle
examples/rnSDKExample/rnSDKExample/ios/: Podfile
lib/llama_cpp/quiverdb/tests/: test_hnsw_index.cpp  test_vector_store.cpp
lib/wrapper/: CMakeLists.txt
lib/wrapper/include/: quiverdb_wrapper.h
lib/wrapper/src/: quiverdb_wrapper.cpp
lib/wrapper/tests/: test_quiverdb_wrapper.cpp
llama_mobile_vd-android-SDK/: README.md  build.gradle
llama_mobile_vd-android-SDK/include/: quiverdb_wrapper.h
llama_mobile_vd-android-SDK/src/main/cpp/: CMakeLists.txt  llama_mobile_vd_jni.cpp
llama_mobile_vd-android-java-SDK/: README.md  build.gradle
llama_mobile_vd-android-java-SDK/src/main/: AndroidManifest.xml
llama_mobile_vd-android/src/main/cpp/: llama_mobile_vd_jni.cpp
llama_mobile_vd-capacitor-plugin/: CapacitorPluginLlamamobilevd.podspec  README.md  jest.config.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
llama_mobile_vd-capacitor-plugin/android/: build.gradle
llama_mobile_vd-capacitor-plugin/coverage/: lcov.info
llama_mobile_vd-capacitor-plugin/coverage/lcov-report/: definitions.ts.html  index.html  index.ts.html  web.ts.html
llama_mobile_vd-capacitor-plugin/ios/Sources/LlamaMobileVDPlugin/: LlamaMobileVDPlugin.swift
llama_mobile_vd-capacitor-plugin/src/: definitions.ts  index.ts  web.ts
llama_mobile_vd-capacitor-plugin/src/__tests__/: llama_mobile_vd_test.ts
llama_mobile_vd-flutter-SDK/: README.md  pubspec.yaml
llama_mobile_vd-flutter-SDK/.dart_tool/: package_config.json  package_graph.json
llama_mobile_vd-flutter-SDK/.dart_tool/extension_discovery/: vs_code.json
llama_mobile_vd-flutter-SDK/ios/: LlamaMobileVDPlugin.swift  llama_mobile_vd.podspec
llama_mobile_vd-flutter-SDK/lib/: llama_mobile_vd.dart
llama_mobile_vd-flutter-SDK/test/: llama_mobile_vd_test.dart
llama_mobile_vd-ios/: CMakeLists.txt
llama_mobile_vd-ios-SDK/: Package.swift  README.md
llama_mobile_vd-ios-SDK/Sources/LlamaMobileVD/: Bridging-Header.h  LlamaMobileVD.swift
llama_mobile_vd-ios-SDK/Tests/LlamaMobileVDTests/: LlamaMobileVDTests.swift
llama_mobile_vd-ios-SDK/src/: LlamaMobileVD.mm
llama_mobile_vd-ios/ios/Frameworks/LlamaMobileVD.framework/LlamaMobileVD.framework/: Info.plist
llama_mobile_vd-react-native-SDK/: README.md  jest.config.js  package-lock.json  package.json
llama_mobile_vd-react-native-SDK/__tests__/: index.test.js
llama_mobile_vd-react-native-SDK/android/: build.gradle
llama_mobile_vd-react-native-SDK/android/src/main/: AndroidManifest.xml
llama_mobile_vd-react-native-SDK/ios/: LlamaMobileVD.podspec  LlamaMobileVD.swift
llama_mobile_vd-react-native-SDK/lib/: index.js
llama_mobile_vd-react-native-SDK/types/: index.d.ts
scripts/: README.md  build-all.bat  build-all.sh  build-android-SDK.sh  build-android.bat  build-android.sh  build-capacitor-plugin.bat  build-capacitor-plugin.sh  build-flutter-SDK.bat  build-flutter-SDK.sh  build-ios-SDK.sh  build-ios.bat  build-ios.sh  build-lib.bat  build-lib.sh  build-rn-SDK.bat  build-rn-SDK.sh  config.env
(+42 files in other folders)
